tests/js/invalid/function/mismatched-types-8.buri
Primary = #red | #green | #blue
Rainbow = #red | #orange | #yellow | #green | #blue | #purple

IsGreen = (Rainbow) => #true | #false
isGreen: IsGreen = (a: Primary) => a == #green